--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href="/favicon.ico">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Watch together app">
+    <link rel="icon" href="/favicon.ico" />
+    <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="jIrhf_yOhh8Kngq9bTx-NaupRHqf3POK3Fwdl0tc9IE" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Watch together app" />
+    <meta
+      property="og:image"
+      content="https://firebasestorage.googleapis.com/v0/b/watch-together-1c3b2.appspot.com/o/metaimg.png?alt=media&token=feb13ebc-a52f-4ec0-a54b-b438d3498100" />
     <title>Watch Together</title>
   </head>
   <body>
